--- a/mainapp/templates/layouts/layout.html
+++ b/mainapp/templates/layouts/layout.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        
+        <link rel="shortcut icon" href="{% static '../../../../../staticfiles/images/favicon.ico %}">
+
                <title>Carreras y Trails</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
