--- a/mainapp/templates/layouts/layout.html
+++ b/mainapp/templates/layouts/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <link rel="shortcut icon" href="{% static '../../../../../staticfiles/images/favicon.ico %}">
+        <link rel="shortcut icon" href="objetos/favicon.ico">
 
                <title>Carreras y Trails</title>
         <meta charset="UTF-8">
