--- a/mainapp/templates/layouts/layout.html
+++ b/mainapp/templates/layouts/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <link rel="stylesheet" href="{% static 'images/favicon.ico' %}">
+        <link rel="shortcut icon" type="image/ico" href="../../static/images/favicon.ico }">
                <title>Carreras y Trails</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
