--- a/mainapp/templates/layouts/layout.html
+++ b/mainapp/templates/layouts/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <link rel="shortcut icon" type="image/ico" href="/favicon.ico}">
+        <link rel="shortcut icon"  href="../../../staticfiles/images/favicon.png">
                <title>Carreras y Trails</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +17,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Cherry+Cream+Soda&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Yomogi&display=swap" rel="stylesheet">
         {% load widget_tweaks %}
-        <link rel="icon" href="data:,">
         <link href="{% static 'css/css/all.css'%}" rel="stylesheet"> <!--load all styles -->
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
