--- a/mainapp/templates/layouts/layout.html
+++ b/mainapp/templates/layouts/layout.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <link rel="shortcut icon"  href="../../../staticfiles/images/favicon.png">
-               <title>Carreras y Trails</title>
+        <title>Carreras y Trails</title>
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         {%load static %}
@@ -18,6 +18,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Yomogi&display=swap" rel="stylesheet">
         {% load widget_tweaks %}
         <link href="{% static 'css/css/all.css'%}" rel="stylesheet"> <!--load all styles -->
+        
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script>
