--- a/mainapp/templates/layouts/layout.html
+++ b/mainapp/templates/layouts/layout.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <title>Carreras y Trails</title>
-        <link rel="shortcut icon" href="#">
+        <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         {%load static %}
