--- a/mainapp/templates/layouts/layout.html
+++ b/mainapp/templates/layouts/layout.html
@@ -17,7 +17,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Yomogi&display=swap" rel="stylesheet">
         {% load widget_tweaks %}
         <link href="{% static 'css/css/all.css'%}" rel="stylesheet"> <!--load all styles -->
-        
+        <link rel="shortcut icon" href="#">
+        <link rel="icon"  href="#">
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script>
@@ -26,7 +27,6 @@
                     dateFormat: 'dd/mm/yy'}).val;
             });
         </script>
-        
     </head>
     <body>
         <header>
